--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
 
   "dependencies": {
     "grunt": "~0.4.2",
-    "grunt-contrib-connect": "~0.7.1"
+
+    "grunt-contrib-uglify": "~0.3.2",
+    "grunt-contrib-cssmin": "~0.8.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-clean": "~0.5.0"
   }
 }
